--- a/EyeHistoria/Views/Admin/ViewQuestions.cshtml
+++ b/EyeHistoria/Views/Admin/ViewQuestions.cshtml
@@ -81,7 +81,7 @@
                 @Html.DisplayFor(modelItem => item.FollowUpID)
             </td>
             <td>
-                @Html.ActionLink("Update", "UpdateQuestion", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Update", "UpdateQuestion", new {id = item.QuestionID }) |
                 @Html.ActionLink("Delete", "DeleteQuestions", new { /* id=item.PrimaryKey */ })
             </td>
         </tr>
