--- a/EyeHistoria/Views/Shared/_AdminLayout.cshtml
+++ b/EyeHistoria/Views/Shared/_AdminLayout.cshtml
@@ -4,11 +4,11 @@
 
 
 <div class="picture">
-    <img class="logo-pic" src="~/lib/images/logo .png" />
+    <img class="logo-pic" src="~/image/logo .png" />
 </div>
 <nav>
 
-        <ul class="navbar-nav">
+        <ul class="nav-bar">
             <li>
                 <a class="active" asp-controller="" asp-controller="Admin" asp-action="Index">Home</a>
             </li>
@@ -22,7 +22,7 @@
         </ul>
                
             </ul>
-            <ul class="navbar-nav ms-auto">
+            <ul class="nav-bar ms-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="~/Admin/LogOut">Log Out</a>
                 </li>
