--- a/EyeHistoria/Views/Shared/_Layout.cshtml
+++ b/EyeHistoria/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
 
 
 
-                <ul class="navbar-nav">
+                <ul class="nav-bar">
                     <li >
                         <a class="active" asp-controller="" asp-controller="Admin" asp-action="Index">Home</a>
                     </li>
