--- a/EyeHistoria/Views/Shared/_AdminLayout.cshtml
+++ b/EyeHistoria/Views/Shared/_AdminLayout.cshtml
@@ -4,7 +4,7 @@
 
 
 <div class="picture">
-    <img class="logo-pic" src="~/lib/images/logo .png" />
+    <img class="logo-pic" src="~/image/logo .png" />
 </div>
 <nav>
 
