--- a/EyeHistoria/Views/Home/SubmitDiagnosis.cshtml
+++ b/EyeHistoria/Views/Home/SubmitDiagnosis.cshtml
@@ -23,12 +23,17 @@
                 Diseases/Conditions
             </th>
             <th>
-                Match Rate
+                Match Rate (%)
             </th>
-            <th></th>
-                <th>
-                    Matched Symptoms 
-                </th>
+            <th>
+                View More
+            </th>
+            <th>
+
+            </th>
+            <th>
+                Matched Symptoms 
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -41,6 +46,11 @@
                 @Html.DisplayFor(modelItem => item.Match)
             </td>
             <td>
+                <a href="@item.LearnMore" target="_blank">
+                    @Html.DisplayFor(modelItem => item.LearnMore)
+                </a>
+            </td>
+            <td>
                 <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_@Html.DisplayFor(modelItem => item.Disease_name)" aria-expanded="false" aria-controls="collapse_@Html.DisplayFor(modelItem => item.Disease_name)">
                     View Details >
                 </button>
@@ -50,12 +60,13 @@
                         <div class="collapse" id="collapse_@Html.DisplayFor(modelItem => item.Disease_name)">
                             <!-- matched symptoms -->
                             <div class="card card-body">
-                                <!--<span style="color:green;">matched symptoms</span>-->
+                                <span style="color:green;">matched symptoms</span>
                                 @foreach (string matched_symptoms in item.Matched_symptoms)
                                 {
                                     <div>@matched_symptoms</div>
                                 }
-                                <!--<span style="color:red;">unmatched symptoms</span>-->
+                                <br/>
+                                <span style="color:red;">unmatched symptoms</span>
                                 @foreach (string unmatched_symptoms in item.Unmatched_symptoms)
                                 {
                                     <div>@unmatched_symptoms</div>
