--- a/EyeHistoria/Views/Admin/ViewDiagnosis.cshtml
+++ b/EyeHistoria/Views/Admin/ViewDiagnosis.cshtml
@@ -4,7 +4,7 @@
 <h1>Diagnosis</h1>
 
 <p>
-    <a asp-action="AddDiagnosis">Create New</a>
+    <a class="btn btn-primary" asp-area="" asp-controller="Admin" asp-action="AddDiagnosis">+ Create New</a>
 </p>
 <div>
     <form asp-action="ViewDiagnosis" method="get">
