--- a/EyeHistoria/Views/Admin/ViewQuestions.cshtml
+++ b/EyeHistoria/Views/Admin/ViewQuestions.cshtml
@@ -11,7 +11,7 @@
 <h1>Questions</h1>
 
 <p>
-    <a asp-action="AddQuestions">Add Question</a>
+    <a class="btn btn-primary" asp-area="" asp-controller="Admin" asp-action="AddQuestions">+ Create New</a>
 </p>
 <form asp-action="ViewQuestions" method="get">
 
