--- a/EyeHistoria/Views/Shared/_AdminLayout.cshtml
+++ b/EyeHistoria/Views/Shared/_AdminLayout.cshtml
@@ -10,7 +10,7 @@
 
         <ul class="nav-bar">
             <li>
-                <a class="active" asp-controller="" asp-controller="Admin" asp-action="Index">Home</a>
+                <a class="active" asp-area="" asp-controller="Admin" asp-action="Index">Home</a>
             </li>
             <li>
                 <a class="nav-link" asp-area="" asp-controller="Admin" asp-action="ViewDiagnosis">Diagnoses</a>
