--- a/EyeHistoria/Views/Home/SubmitDiagnosis.cshtml
+++ b/EyeHistoria/Views/Home/SubmitDiagnosis.cshtml
@@ -29,6 +29,9 @@
                 View More
             </th>
             <th>
+                Possible Tests
+            </th>
+            <th>
 
             </th>
             <th>
@@ -49,6 +52,9 @@
                 <a href="@item.LearnMore" target="_blank">
                     @Html.DisplayFor(modelItem => item.LearnMore)
                 </a>
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Tests)
             </td>
             <td>
                 <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_@Html.DisplayFor(modelItem => item.Disease_name)" aria-expanded="false" aria-controls="collapse_@Html.DisplayFor(modelItem => item.Disease_name)">
