--- a/EyeHistoria/Views/Admin/AddQuestions.cshtml
+++ b/EyeHistoria/Views/Admin/AddQuestions.cshtml
@@ -19,22 +19,22 @@
             </div>
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
-                <input asp-for="Type" class="form-control" />
+                <input asp-for="Type" class="form-control" value="Onset"/>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Category" class="control-label"></label>
-                <input asp-for="Category" class="form-control" />
+                <input asp-for="Category" class="form-control" value="General" />
                 <span asp-validation-for="Category" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SymptomID" class="control-label"></label>
-                <input asp-for="SymptomID" class="form-control" />
+                <input asp-for="SymptomID" class="form-control" value="1" />
                 <span asp-validation-for="SymptomID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SymptomName" class="control-label"></label>
-                <input asp-for="SymptomName" class="form-control" />
+                <input asp-for="SymptomName" class="form-control" value="Eye Redness"/>
                 <span asp-validation-for="SymptomName" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -49,7 +49,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="FollowUpID" class="control-label"></label>
-                <input asp-for="FollowUpID" class="form-control" />
+                <input asp-for="FollowUpID" class="form-control" value="0"/>
                 <span asp-validation-for="FollowUpID" class="text-danger"></span>
             </div>
 
