--- a/EyeHistoria/Views/Admin/ViewQuestions.cshtml
+++ b/EyeHistoria/Views/Admin/ViewQuestions.cshtml
@@ -17,7 +17,7 @@
 
 
     <div class="input-group mb-3">
-        Search Diagnosis:
+        Search Questions:
         <select class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" name="searchBy">
             <option value="#" class="dropdown-item">Filter By</option>
             <option value="QuestionText" class="dropdown-item">Question Content</option>
