--- a/EyeHistoria/Views/Process/Index.cshtml
+++ b/EyeHistoria/Views/Process/Index.cshtml
@@ -39,7 +39,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="ChiefComplaintProcess">Next</a>
 </div>
 
 @section Scripts {
