Implemented PersonalOcularHistory and FamilyOcularHistory & Attempts at combining both page fields with tab differentiation

--- a/EyeHistoria/Views/Process/ChiefComplaintProcess.cshtml
+++ b/EyeHistoria/Views/Process/ChiefComplaintProcess.cshtml
@@ -19,7 +19,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="PersonalOcularHistoryProcess">Next</a>
 </div>
 
 @section Scripts {
