--- a/EyeHistoria/Views/Process/FamilyOcularHistoryProcess.cshtml
+++ b/EyeHistoria/Views/Process/FamilyOcularHistoryProcess.cshtml
@@ -34,7 +34,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="PersonalHealthHistoryProcess">Next</a>
 </div>
 
 @section Scripts {
